--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,6 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -34,7 +32,7 @@ keywords = [
     "openai",
     "chroma",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
     # Core MCP runtime
     "fastmcp>=2.11.1",
@@ -50,6 +48,10 @@ dependencies = [
 
     # Environment configuration
     "dotenv>=0.9.9",
+    # Default parser and chunker dependencies for OOTB experience
+    "pymupdf4llm>=0.0.27",
+    "PyMuPDF>=1.26.3",
+    "langchain-text-splitters>=0.3.9",
 ]
 
 [project.optional-dependencies]
@@ -61,7 +63,7 @@ dev = [
     "pytest-mock>=3.14.0",
 
     # Code quality
-    "black>=25.1.0",
+    "black>=24.8.0",
     "isort>=6.0.0",
     "flake8>=7.3.0",
     "mypy>=1.17.0",
@@ -157,7 +159,7 @@ include = [
 # Black configuration
 [tool.black]
 line-length = 120
-target-version = ['py38']
+target-version = ['py310']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
