--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A Model Context Protocol server for managing PDF documents with v
 readme = "README.md"
 license = "MIT"
 authors = [
-    { name = "PDF Knowledgebase MCP Team" },
+    { name = "Juan Villa", email = "juanqui@villafam.com" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
