--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,11 @@ dependencies = [
 
     # Local embeddings support (default)
     "torch>=2.0.0",
-    "transformers>=4.35.0",
+    "transformers>=4.55.0",
     "accelerate>=0.24.0",
     "safetensors>=0.4.0",
     "huggingface-hub>=0.19.0",
+    "gguf>=0.17.0",
 
     # Hybrid search support (included by default)
     "whoosh>=2.7.4",
@@ -80,7 +81,7 @@ hybrid = [
 
 local-embeddings = [
     "torch>=2.0.0",  # For MPS support and torch.compile
-    "transformers>=4.35.0",  # For model support
+    "transformers>=4.55.0",  # For model support
     "accelerate>=0.24.0",  # For device management
     "safetensors>=0.4.0",  # For safe model loading
     "huggingface-hub>=0.19.0",  # For model downloading
