--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "watchdog>=6.0.0",
 
     # Environment configuration
-    "dotenv>=0.9.9",
+    "python-dotenv>=0.9.9",
 
     # Web interface core dependencies
     "fastapi>=0.104.0",
