--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -27,14 +27,11 @@ services:
     # ═══════════════════════════════════════════════════════════════════════════════════════════
 
     ports:
-      # Web interface port (when PDFKB_WEB_ENABLE=true)
+      # Unified server port (Web interface + MCP endpoints)
       - "8000:8000"
 
-      # MCP server port (HTTP/SSE transport)
-      - "8001:8001"
-
-      # Alternative web port mapping (optional)
-      # - "8082:8082"
+      # Alternative port mapping (optional)
+      # - "8080:8000"
 
     # ═══════════════════════════════════════════════════════════════════════════════════════════
     # 💾 VOLUME MOUNTS
@@ -79,12 +76,6 @@ services:
       # Transport mode: stdio (default), http, sse
       PDFKB_TRANSPORT: "${PDFKB_TRANSPORT:-http}"
 
-      # Server host (for HTTP/SSE transport)
-      PDFKB_SERVER_HOST: "0.0.0.0"
-
-      # Server port (for HTTP/SSE transport)
-      PDFKB_SERVER_PORT: "8001"
-
       # ┌─────────────────────────────────────────────────────────────────────────────────────┐
       # │ 🧠 EMBEDDING CONFIGURATION                                                           │
       # └─────────────────────────────────────────────────────────────────────────────────────┘
@@ -128,13 +119,13 @@ services:
       # PDFKB_HUGGINGFACE_PROVIDER: ""  # Optional provider like "nebius"
 
       # ┌─────────────────────────────────────────────────────────────────────────────────────┐
-      # │ 🌐 WEB INTERFACE CONFIGURATION                                                       │
+      # │ 🌐 UNIFIED SERVER CONFIGURATION                                                      │
       # └─────────────────────────────────────────────────────────────────────────────────────┘
 
-      # Enable web interface (default: false)
+      # Enable web interface + MCP endpoints on same port (default: false)
       PDFKB_WEB_ENABLE: "true"
 
-      # Web interface host and port
+      # Unified server host and port (serves both web interface and MCP endpoints)
       PDFKB_WEB_HOST: "0.0.0.0"
       PDFKB_WEB_PORT: "8000"
 
