--- a/.env.dev
+++ b/.env.dev
@@ -9,7 +9,7 @@ PDFKB_LOG_LEVEL=DEBUG
 
 # === Transport Configuration ===
 PDFKB_TRANSPORT=http
-PDFKB_SERVER_PORT=8000
+PDFKB_MCP_PORT=8001
 
 # === Embedding Configuration ===
 # Default: local embeddings (no API key required)
@@ -28,7 +28,7 @@ PDFKB_LOCAL_EMBEDDING_MODEL=Qwen/Qwen3-Embedding-0.6B
 
 # === Web Interface Configuration ===
 PDFKB_WEB_ENABLE=true
-PDFKB_WEB_PORT=8080
+PDFKB_WEB_PORT=8000
 
 # === Processing Configuration ===
 PDFKB_PDF_PARSER=pymupdf4llm
