fix: add back mineru and marker-pdf with compatible versions
- Updated Pillow requirement to >=11.0.0 to satisfy mineru requirements
- Updated marker-pdf to >=1.10.0 (newer version that should support Pillow>=11.0.0)
- Added both dependencies back to [all] extras group
- This resolves the pillow version conflict that was breaking CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,14 @@ semantic = [
     "langchain-text-splitters>=0.3.9",
 ]
 
+mineru = [
+    "mineru[pipeline]>=2.1.10",
+]
+
+marker = [
+    "marker-pdf>=1.10.0",
+]
+
 docling = [
     "docling>=2.43.0",
 ]
@@ -143,7 +151,7 @@ llm = [
     "httpx>=0.28.1",
     "PyMuPDF>=1.26.3",
     "Jinja2>=3.1.6",
-    "Pillow>=10.1.0",
+    "Pillow>=11.0.0",
 ]
 
 unstructured_chunker = [
@@ -164,6 +172,8 @@ all = [
     "pdfkb-mcp[unstructured]",
     "pdfkb-mcp[pymupdf4llm]",
     "pdfkb-mcp[langchain]",
+    "pdfkb-mcp[mineru]",
+    "pdfkb-mcp[marker]",
     "pdfkb-mcp[docling-complete]",
     "pdfkb-mcp[llm]",
     "pdfkb-mcp[unstructured_chunker]",
