--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,10 +130,12 @@ semantic = [
 
 mineru = [
     "mineru[pipeline]>=2.1.10",
+    "Pillow>=11.0.0",
 ]
 
 marker = [
     "marker-pdf>=1.10.0",
+    "Pillow>=10.1.0,<11.0.0",
 ]
 
 docling = [
@@ -151,7 +153,6 @@ llm = [
     "httpx>=0.28.1",
     "PyMuPDF>=1.26.3",
     "Jinja2>=3.1.6",
-    "Pillow>=10.1.0",
 ]
 
 unstructured_chunker = [
@@ -172,10 +173,21 @@ all = [
     "pdfkb-mcp[unstructured]",
     "pdfkb-mcp[pymupdf4llm]",
     "pdfkb-mcp[langchain]",
-    "pdfkb-mcp[mineru]",
     "pdfkb-mcp[docling-complete]",
     "pdfkb-mcp[llm]",
     "pdfkb-mcp[unstructured_chunker]",
+]
+
+all-with-mineru = [
+    # All dependencies including mineru PDF parser
+    "pdfkb-mcp[all]",
+    "pdfkb-mcp[mineru]",
+]
+
+all-with-marker = [
+    # All dependencies including marker PDF parser
+    "pdfkb-mcp[all]",
+    "pdfkb-mcp[marker]",
 ]
 
 [project.urls]
