--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,9 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     needs: test-and-build
+    strategy:
+      matrix:
+        pdf-parser: [marker, mineru]
     permissions:
       contents: read
       packages: write
@@ -117,6 +120,8 @@ jobs:
         tags: |
           # Latest tag for main branch pushes (not tags)
           type=raw,value=latest,enable={{is_default_branch}}
+          # PDF parser specific tags
+          type=raw,value=${{ matrix.pdf-parser }}-latest,enable={{is_default_branch}}
           # Branch-based tags for development
           type=ref,event=branch,enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
           # PR-based tags
@@ -128,7 +133,7 @@ jobs:
           type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
         labels: |
           org.opencontainers.image.title=pdfkb-mcp
-          org.opencontainers.image.description=PDF Knowledgebase MCP Server - Document search with vector embeddings
+          org.opencontainers.image.description=PDF Knowledgebase MCP Server - Document search with vector embeddings (PDF Parser: ${{ matrix.pdf-parser }})
           org.opencontainers.image.source=https://github.com/tekgnosis-net/pdfkb-mcp
           org.opencontainers.image.licenses=MIT
           org.opencontainers.image.authors=Juan Villa <juanqui@villafam.com>
@@ -147,6 +152,7 @@ jobs:
           PDFKB_VERSION=${{ github.ref_name }}
           BUILD_DATE=${{ steps.meta.outputs.created }}
           VCS_REF=${{ github.sha }}
+          PDF_PARSER=${{ matrix.pdf-parser }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
@@ -154,7 +160,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ matrix.pdf-parser }}-latest
         subject-digest: ${{ steps.build.outputs.digest }}
         push-to-registry: true
 
@@ -164,11 +170,13 @@ jobs:
         echo "📋 Image tags:"
         echo "${{ steps.meta.outputs.tags }}" | sed 's/^/  - /'
         echo ""
+        echo "🔧 PDF Parser: ${{ matrix.pdf-parser }}"
+        echo ""
         if [[ "${{ startsWith(github.ref, 'refs/tags/v') }}" == "true" ]]; then
           echo "🚀 RELEASE: Image pushed to registry with version tags"
           echo "💾 Image digest: ${{ steps.build.outputs.digest }}"
         elif [[ "${{ github.ref }}" == "refs/heads/main" && "${{ github.event_name }}" == "push" ]]; then
-          echo "🚀 MAIN: Image pushed to registry as 'latest'"
+          echo "🚀 MAIN: Image pushed to registry as 'latest' and '${{ matrix.pdf-parser }}-latest'"
           echo "💾 Image digest: ${{ steps.build.outputs.digest }}"
         else
           echo "ℹ️  Image built but not pushed (development/PR)"
