--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,12 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
+        # Build on amd64 only. The CUDA PyTorch base image used in the Dockerfile
+        # requires x86_64; attempting to run apt/build steps for arm64 under QEMU
+        # in the Actions runner caused "Invalid ELF image for this architecture".
+        # If you later need arm64 artifacts, consider a separate cross-build pipeline
+        # with an arm64-compatible base image or pre-built multi-arch binaries.
+        platforms: linux/amd64
         # Push only on: 1) version tags, 2) main branch pushes
         push: ${{ startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         tags: ${{ steps.meta.outputs.tags }}
