--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,10 +20,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dev dependencies
+      - name: Install project and dev dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements-dev.txt ]; then python -m pip install -r requirements-dev.txt; fi
+          python -m pip install --upgrade pip setuptools wheel
+          # Install the package and developer extras (falls back to editable install)
+          python -m pip install -e '.[dev]' || python -m pip install -e .
 
       - name: Run tests
         run: |
