--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,11 +23,14 @@ jobs:
       - name: Install project and dev dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          # Install the package and developer extras. Some test suites
-          # exercise optional parsers (Unstructured, Docling) so try to
-          # install those extras as well; fall back gracefully to dev
-          # extras if the full install is not possible in the runner.
-          python -m pip install -e ".[dev,unstructured_chunker,docling]" || python -m pip install -e '.[dev]' || python -m pip install -e .
+          # Install the package with developer extras (fast and reliable).
+          # Then attempt to install a small set of optional packages that
+          # tests commonly import during collection. Make those installs
+          # non-fatal so runners that can't build heavy native deps still
+          # run the test suite (tests should stub heavy libraries where
+          # appropriate).
+          python -m pip install -e '.[dev]' \
+            && python -m pip install whoosh langchain-core aiohttp reportlab marker-pdf || true
 
       - name: Run tests
         run: |
